// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination component Next button should be disabled 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Pagination Should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "backgroundColor": undefined,
    "className": "",
    "clearfix": undefined,
    "clipped": undefined,
    "current": 0,
    "delta": 5,
    "hidden": undefined,
    "invisible": undefined,
    "italic": undefined,
    "marginless": undefined,
    "next": "Next",
    "onChange": [Function],
    "overlay": undefined,
    "paddingless": undefined,
    "position": null,
    "previous": "Previous",
    "pull": undefined,
    "radiusless": undefined,
    "renderAs": "nav",
    "responsive": undefined,
    "rounded": false,
    "shadowless": undefined,
    "showPrevNext": false,
    "size": null,
    "textAlignment": undefined,
    "textColor": undefined,
    "textSize": undefined,
    "textTransform": undefined,
    "textWeight": undefined,
    "total": 1,
    "unselectable": undefined,
  },
  "propTypes": Object {
    "autoHide": [Function],
    "backgroundColor": [Function],
    "className": [Function],
    "clearfix": [Function],
    "clipped": [Function],
    "current": [Function],
    "delta": [Function],
    "hidden": [Function],
    "invisible": [Function],
    "italic": [Function],
    "marginless": [Function],
    "next": [Function],
    "onChange": [Function],
    "overlay": [Function],
    "paddingless": [Function],
    "position": [Function],
    "previous": [Function],
    "pull": [Function],
    "radiusless": [Function],
    "responsive": [Function],
    "rounded": [Function],
    "shadowless": [Function],
    "showPrevNext": [Function],
    "size": [Function],
    "textAlignment": [Function],
    "textColor": [Function],
    "textSize": [Function],
    "textTransform": [Function],
    "textWeight": [Function],
    "total": [Function],
    "unselectable": [Function],
  },
  "render": [Function],
}
`;

exports[`Pagination component Should have 3 pages and page 1 active 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-current="page"
        aria-label="Page 2 is your current page"
        className="pagination-link is-current"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Should have 5 pages, page 5 active and display pages 3 to 5 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 3"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        5
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Should not display Previous/Next buttons 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className="active"
    >
      <a
        aria-current="page"
        aria-label="Page 3 is your current page"
        className="pagination-link is-current"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        3
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        5
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Should not display page numbers 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className="break"
    >
      <a
        className="pagination-ellipsis"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        ...
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 4"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        4
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 5"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        5
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Should not render if current page is greater than total pages 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 2"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        2
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;

exports[`Pagination component Should not render if total pages equals 1 1`] = `
<nav
  aria-label="pagination"
  className="pagination"
  style={Object {}}
>
  <ul
    className="pagination-list"
  >
    <li
      className="previous"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
    <li>
      <a
        aria-current={null}
        aria-label="Page 1"
        className="pagination-link"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      >
        1
      </a>
    </li>
    <li
      className="next"
    >
      <a
        aria-disabled="false"
        className={false}
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex="0"
      />
    </li>
  </ul>
</nav>
`;
